Update for Java 8 compatibility and internal CRIO builds